# skill_forge_underworld

./: .gitignore  Dockerfile  README.md  config.py  openai_client.py  quest_examples.txt  requirements.txt  run.py  serpyros.py  setup.cfg
General/: Kernathor.json
Python/: Lambdaen.json  Serpyros.json  serpyros.py
app/: __init__.py  boss_routes.py  database_conn.py  main_routes.py  models.py  openai_client.py  question_routes.py
