[metadata]
name = Skill-Forge-Underworld
version = 1.0.2
release_date = 01.11.2024
description = Skill Forge Underworld is a microservice API created for Underworld functionality in Skill Forge.
author = Aleksandar Karastoyanov
author_email = karastoqnov.alexandar@gmail.com
url = https://github.com/karastoyanov/skill_forge
license = GNU GPL v3.0
classifiers =
    Programming Language :: Python3
    License :: OSI Approved :: GNU GPL
    Database :: PostgreSQL :: MongoDB
    Backend Framework :: Flask
    GenAI :: AI Prompt Engineering
